	Fixed: #IP-1363: Unable to suspend customer account
	Fixed: #IP-1364: Custom DNS records are lost when editing domain properties
	Fixed: #IP-1371: Bug - When removing domain alias, the vhost link in /etc/apache2/sites-enabled is not removed
	Fixed: #IP-1373: Compliance with RFC 2142 - Add a hostmaster address by default

------------------------------------------------------------------------------------------------------------------------
1.2.8
------------------------------------------------------------------------------------------------------------------------

2015-06-20: Laurent Declercq
	RELEASE i-MSCP 1.2.8

BACKEND
	Fixed: Unable to disable domain name (Apache2 FCGID server implementation)

------------------------------------------------------------------------------------------------------------------------
1.2.7
------------------------------------------------------------------------------------------------------------------------

2015-06-19: Laurent Declercq
	RELEASE i-MSCP 1.2.7

BACKEND
	Fixed: BASE_SERVER_VHOST placeholder is not replaced in vhost files (httpd server implementations)
	Fixed: Unable to delete domain alias - Can't locate object method _getSharedMountPoints via package Modules::Alias
	Fixed: Unable to delete subdomain - Can't locate object method _getSharedMountPoints via package Modules::Subdomain

------------------------------------------------------------------------------------------------------------------------
1.2.6
------------------------------------------------------------------------------------------------------------------------

2015-06-18: Laurent Declercq
	RELEASE i-MSCP 1.2.6

BACKEND
	Changed: Primary phptmp directory is now used by all PHP sites
	Fixed: Wrong TMPDIR set in fcgi starter script for domains which use mount point of another domain
	Fixed: Wrong TMPDIR set in pool configuration files for domains which use mount point of another domain